@@ -10,6 +10,9 @@ update-manager (1:0.96.5) jaunty; urgency=low
       * check users gconf
       * check http_proxy environment 
     (LP: #24250)
+  * UpdateManager/Core/DistUpgradeFetcherCore.py:
+    - ensure correct error message if downloading failed
+      (LP: #113658)
   
  --
 
